Fixed a bug - the modal window was overlapped with a slider

--- a/src/sass/blocks/_modal.scss
+++ b/src/sass/blocks/_modal.scss
@@ -4,7 +4,8 @@
     width: 100%;
     height: 100%;
     top: 0;
-    background: rgba(0, 0, 0, 0.4);    
+    background: rgba(0, 0, 0, 0.4);
+    z-index: 1;    
 }
 .modal {
     position: absolute;
